# wasm-tools

./: Cargo.toml
crates/wasm-encoder/src/core/: code.rs
crates/wasm-mutate/src/: module.rs
crates/wasm-mutate/src/mutators/: remove_item.rs
crates/wasm-shrink/src/: lib.rs
crates/wasm-smith/tests/: available_imports.rs  core.rs
crates/wasmparser/: Cargo.toml
crates/wasmparser/benches/: benchmark.rs
crates/wasmparser/src/: binary_reader.rs  lib.rs  resources.rs  validator.rs
crates/wasmparser/src/readers/component/: types.rs
crates/wasmparser/src/readers/core/: types.rs
crates/wasmparser/src/readers/core/types/: matches.rs
crates/wasmparser/src/validator/: component.rs  core.rs  func.rs  operators.rs  solver.rs  types.rs
crates/wasmparser/src/validator/index_language/: Cargo.toml
crates/wasmparser/src/validator/index_language/src/: lib.rs
crates/wasmprinter/src/: lib.rs  operator.rs
crates/wast/src/: lib.rs  token.rs
crates/wast/src/component/: binary.rs
crates/wast/src/core/: binary.rs  expr.rs  func.rs  import.rs  tag.rs  types.rs
crates/wast/src/core/resolve/: index_types.rs  mod.rs  names.rs  types.rs
crates/wast/tests/: annotations.rs
crates/wit-component/src/: gc.rs  validation.rs
crates/wit-component/src/linking/: metadata.rs
fuzz/fuzz_targets/: validate.rs
fuzz/src/: validate.rs
tests/: roundtrip.rs
