[package]
name = "wasmparser"
version = "0.96.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
keywords = ["parser", "WebAssembly", "wasm"]
description = """
A simple event-driven library for parsing WebAssembly binary files.
"""
edition.workspace = true
exclude = ["benches/*.wasm"]

[dependencies]
indexmap = { workspace = true }
index_language = { path = "./src/validator/index_language" }
z3 = { git="https://github.com/Trolldemorted/z3.rs/", rev="2d8ed61411f6d0672c7987a7ceafbd0e68db5ed9" }
url = "2.3.1"

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
wat = { path = "../wat" }
wast = { path = "../wast" }
rayon = { workspace = true }
wasmparser-dump = { path = "../dump" }
once_cell = "1.13.0"

[[bench]]
name = "benchmark"
harness = false
