[package]
name = "wasmparser"
version = "0.107.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
keywords = ["parser", "WebAssembly", "wasm"]
description = """
A simple event-driven library for parsing WebAssembly binary files.
"""
edition.workspace = true
exclude = ["benches/*.wasm"]

[dependencies]
indexmap = { workspace = true }
index_language = { path = "./src/validator/index_language" }
z3 = { git="https://github.com/Trolldemorted/z3.rs/", branch="buildfix3", features = ["dynamic-link-z3"] }
url = "2.3.1"
semver = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
wat = { path = "../wat" }
wast = { path = "../wast" }
rayon = { workspace = true }
once_cell = "1.13.0"
wasm-encoder = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
